--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Juan Oyarzún",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
     "nanoid": "^3.1.9"
   },
   "devDependencies": {
