--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "nanoid": "^3.1.9"
+    "nanoid": "^3.1.9",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "swagger-ui-express": "^4.1.4"
