--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nanoid": "^3.1.9",
+    "redis": "^3.0.2",
     "request": "^2.88.2"
   },
   "devDependencies": {
